--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Dependency directories
 node_modules/
+
 /.idea
 .DS_Store
+
+# dotenv environment variables file
+.env
