--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@types/express": "^4.17.11",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.12.9",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
