--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/app.ts"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,12 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.1",
+    "clear": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "figlet": "^1.5.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "ts-node-dev": "^1.1.6",
