--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "NODE_PATH=./build node build/app.js",
+    "build": "tsc -p .",
+    "dev": "nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
