--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "ts-node-dev": "^1.1.6",
+    "typedi": "^0.10.0",
     "typescript": "^4.2.4",
     "winston": "^3.3.3"
   },
