--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "figlet": "^1.5.0",
+    "joi": "^17.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "ts-node-dev": "^1.1.6",
