--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/nodemailer": "^6.4.2",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "clear": "^0.1.0",
@@ -32,6 +33,8 @@
     "joi": "^17.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
+    "nodemailer": "^6.6.2",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.6",
     "typedi": "^0.10.0",
     "typescript": "^4.2.4",
