--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.3",
     "@types/nodemailer": "^6.4.2",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
@@ -31,6 +32,7 @@
     "express": "^4.17.1",
     "figlet": "^1.5.0",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "nodemailer": "^6.6.2",
