--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_PATH=./build node build/app.js",
     "build": "tsc -p .",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "swagger": "tsoa spec"
   },
   "repository": {
     "type": "git",
@@ -34,16 +35,21 @@
     "figlet": "^1.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "nodemailer": "^6.6.2",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
+    "tsoa": "^3.8.0",
     "typedi": "^0.10.0",
     "typescript": "^4.2.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
+    "concurrently": "^6.2.0",
     "nodemon": "^2.0.7"
   }
 }
