--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/nodemailer": "^6.4.2",
+    "@types/qrcode": "^1.4.1",
+    "@types/speakeasy": "^2.0.6",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "clear": "^0.1.0",
@@ -39,7 +41,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "nodemailer": "^6.6.2",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
+    "speakeasy": "^2.0.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
     "tsoa": "^3.8.0",
