--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "figlet": "^1.5.0",
+    "gridfs-stream": "^1.1.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.6.2",
     "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
@@ -49,9 +52,13 @@
     "tsoa": "^3.8.0",
     "typedi": "^0.10.0",
     "typescript": "^4.2.4",
+    "util": "^0.12.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/gridfs-stream": "^0.5.35",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7"
